<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbridge_mqtt</name>
  <version>0.0.0</version>
  <description>mqtt bridge for ROS2</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mosquitto-clients</depend>
  <depend>mosquitto-dev</depend>
  <depend>mosquitto</depend>
  <depend>rcl</depend>
  <depend>rmw</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rclcpp_components</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
